--- a/2versuch.html
+++ b/2versuch.html
@@ -97,57 +97,72 @@
         <!-- Anleitung-->
         <section class="page-section" id="manual">
             <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase text-light">So funktioniert es:</h2>
-                </div>
-                <ul class="timeline">
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer1.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading text-light">Erstelle dein Profil</h4>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="card card-flip h-100">
+                            <div class="card-front text-white bg-dark">
+                                <div class="card-body">
+                                    <h3 class="card-title">Erstelle dein Profil</h3>
+                                </div>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.
-                            ! Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer2.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading text-light">Berufswahltest</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-light">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Mit unserem großen Berufswahl-Test finden wir diejenigen Ausbildungsberufe, die gut zu Dir passen.  
-                            ! Auch die Ergebnisse dieses Berufswahl-Tests sind streng vertraulich. Du benötigst weniger als eine halbe Stunde dafür.</p>
+                            <div class="card-back text-white bg-dark">
+                                <div class="card-body">
+                                    <p class="card-text">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.
+                                    ! Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
+                                </div>
                             </div>
                         </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer3.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading text-light">Mach‘ den Praxis-Check!</h4>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="card card-flip h-100">
+                            <div class="card-front text-white bg-dark">
+                                <div class="card-body">
+                                    <h3 class="card-title">Berufswahltest</h3>
+                                </div>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Du beantwortest in einem Online-Interview speziell für diesen Ausbildungsberuf wichtige Fragen und erfährst unmittelbar, ob Du dafür besonders geeignet bist. Falls wir uns nicht sicher sind, schlagen wir Dir weitere Ausbildungsberufe vor. 
-                            ! Du brauchst weniger als eine Stunde pro Interview. Die Interviews und deren Ergebnisse werden streng vertraulich behandelt. Unsere Coaches beraten Dich hinsichtlich Deiner Möglichkeiten.</p>
+                            <div class="card-back text-white bg-dark">
+                                <div class="card-body">
+                                    <p class="card-text">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Mit unserem großen Berufswahl-Test finden wir diejenigen Ausbildungsberufe, die gut zu Dir passen.  
+                                    ! Auch die Ergebnisse dieses Berufswahl-Tests sind streng vertraulich. Du benötigst weniger als eine halbe Stunde dafür.</p>
+                                </div>
                             </div>
                         </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer4.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading text-light">
-                                <h4 class="subheading">Jetzt kannst Du Dich entspannen</h4>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="card card-flip h-100">
+                            <div class="card-front text-white bg-dark">
+                                <div class="card-body">
+                                    <h3 class="card-title">Mach‘ den Praxis-Check!</h3>
+                                </div>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Wir suchen nach den passenden Stellen für Dich. Du erhältst Anfragen von Unternehmen und entscheidest, welche für Dich in Frage kommen.</p></div>
+                            <div class="card-back text-white bg-dark">
+                                <div class="card-body">
+                                    <p class="card-text">Du beantwortest in einem Online-Interview speziell für diesen Ausbildungsberuf wichtige Fragen und erfährst unmittelbar, ob Du dafür besonders geeignet bist. Falls wir uns nicht sicher sind, schlagen wir Dir weitere Ausbildungsberufe vor. 
+                                    ! Du brauchst weniger als eine Stunde pro Interview. Die Interviews und deren Ergebnisse werden streng vertraulich behandelt. Unsere Coaches beraten Dich hinsichtlich Deiner Möglichkeiten.</p>
+                                </div>
+                            </div>
                         </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="container">
-                <div class="row justify-content-center">
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="card card-flip h-100">
+                            <div class="card-front text-white bg-dark">
+                                <div class="card-body">
+                                    <h3 class="card-title">Jetzt kannst Du Dich entspannen</h3>
+                                </div>
+                            </div>
+                            <div class="card-back text-white bg-dark">
+                                <div class="card-body">
+                                    <p class="card-text">Wir suchen nach den passenden Stellen für Dich. Du erhältst Anfragen von Unternehmen und entscheidest, welche für Dich in Frage kommen.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                                   
+
+                <div class="container">
+                    <div class="row justify-content-center">
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="users/login.html" id="signbtn">Jetzt anmelden</a>
+                    </div>
                 </div>
             </div>
             <hr class="divider my-4" />
