--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-search text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Finde Deine Stärken</h3>
-                            <p class="text-muted mb-0"></p>
+                            <p class="text-muted mb-0">Lern‘ Dich und Deine Leidenschaften kennen. Mach den Berufswahltest und wir sagen Dir, welche Ausbildung zu Dir passt.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -99,62 +99,37 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
-                        <div class="card card-flip h-100">
-                            <div class="card-front text-white bg-dark">
-                                <div class="card-body">
-                                    <h3 class="card-title">Erstelle dein Profil</h3>
-                                </div>
-                            </div>
-                            <div class="card-back text-white bg-dark">
-                                <div class="card-body">
-                                    <p class="card-text">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.
-                                    ! Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
-                                </div>
+                        <div class="card border-dark h-100 bg-transparent text-light">
+                            <div class="card-header text-center">Erstelle dein Profil</div>
+                            <div class="card-body text primary">
+                                <p class="card-text">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.<br><hr class="solid">
+                                Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <div class="card card-flip h-100">
-                            <div class="card-front text-white bg-dark">
-                                <div class="card-body">
-                                    <h3 class="card-title">Erstelle dein Profil</h3>
-                                </div>
-                            </div>
-                            <div class="card-back text-white bg-dark">
-                                <div class="card-body">
-                                    <p class="card-text">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.
-                                    ! Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
-                                </div>
+                        <div class="card border-dark h-100 bg-light text-dark">
+                            <div class="card-header text-center">Berufswahltest</div>
+                            <div class="card-body text primary">
+                                <p class="card-text">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Mit unserem großen Berufswahl-Test finden wir diejenigen Ausbildungsberufe, die gut zu Dir passen.</p> 
+                                <hr class="solid">
+                                <p>Auch die Ergebnisse dieses Berufswahl-Tests sind streng vertraulich. Du benötigst weniger als eine halbe Stunde dafür. </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <div class="card card-flip h-100">
-                            <div class="card-front text-white bg-dark">
-                                <div class="card-body">
-                                    <h3 class="card-title">Erstelle dein Profil</h3>
-                                </div>
-                            </div>
-                            <div class="card-back text-white bg-dark">
-                                <div class="card-body">
-                                    <p class="card-text">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.
-                                    ! Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
-                                </div>
+                        <div class="card h-100 text-white bg-dark">
+                            <div class="card-header text-center">Mach‘ den Praxis-Check!</div>
+                            <div class="card-body text primary">
+                                <p class="card-text">Du beantwortest in einem Online-Interview speziell für diesen Ausbildungsberuf wichtige Fragen und erfährst unmittelbar, ob Du dafür besonders geeignet bist. Falls wir uns nicht sicher sind, schlagen wir Dir weitere Ausbildungsberufe vor.<br><hr class="solid"> Du brauchst weniger als eine Stunde pro Interview. Die Interviews und deren Ergebnisse werden streng vertraulich behandelt. Unsere Coaches beraten Dich hinsichtlich Deiner Möglichkeiten.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <div class="card card-flip h-100">
-                            <div class="card-front text-white bg-dark">
-                                <div class="card-body">
-                                    <h3 class="card-title">Erstelle dein Profil</h3>
-                                </div>
-                            </div>
-                            <div class="card-back text-white bg-dark">
-                                <div class="card-body">
-                                    <p class="card-text">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.
-                                    ! Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
-                                </div>
+                        <div class="card text-white bg-secondary h-100">
+                            <div class="card-header text-center">Jetzt kannst Du Dich entspannen</div>
+                            <div class="card-body text primary">
+                                <p class="card-text">Wir suchen nach den passenden Stellen für Dich. Du erhältst Anfragen von Unternehmen und entscheidest, welche für Dich in Frage kommen.</p>
                             </div>
                         </div>
                     </div>
