--- a/index.html
+++ b/index.html
@@ -96,36 +96,39 @@
 
         <!-- Anleitung-->
         <section class="page-section" id="manual">
-            <div class="container">
+            <div class="container text-center">
+                <h2 class="section-heading text-uppercase text-dark">Was nur wir für Dich tun!</h2>
+                <hr class="divider my-4" />
                 <div class="row">
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6" id="reihe">
                         <div class="card border-dark h-100 bg-transparent text-light">
                             <div class="card-header text-center">Erstelle dein Profil</div>
                             <div class="card-body text primary">
-                                <p class="card-text">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.<br><hr class="solid">
+                                <p class="card-text">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.<br><hr class="divider my-4" />
                                 Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6" id="reihe">
                         <div class="card border-dark h-100 bg-light text-dark">
                             <div class="card-header text-center">Berufswahltest</div>
                             <div class="card-body text primary">
                                 <p class="card-text">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Mit unserem großen Berufswahl-Test finden wir diejenigen Ausbildungsberufe, die gut zu Dir passen.</p> 
-                                <hr class="solid">
+                                <hr class="divider my-4" />
                                 <p>Auch die Ergebnisse dieses Berufswahl-Tests sind streng vertraulich. Du benötigst weniger als eine halbe Stunde dafür. </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6" id="reihe">
                         <div class="card h-100 text-white bg-dark">
                             <div class="card-header text-center">Mach‘ den Praxis-Check!</div>
                             <div class="card-body text primary">
-                                <p class="card-text">Du beantwortest in einem Online-Interview speziell für diesen Ausbildungsberuf wichtige Fragen und erfährst unmittelbar, ob Du dafür besonders geeignet bist. Falls wir uns nicht sicher sind, schlagen wir Dir weitere Ausbildungsberufe vor.<br><hr class="solid"> Du brauchst weniger als eine Stunde pro Interview. Die Interviews und deren Ergebnisse werden streng vertraulich behandelt. Unsere Coaches beraten Dich hinsichtlich Deiner Möglichkeiten.</p>
+                                <p class="card-text">Du beantwortest in einem Online-Interview speziell für diesen Ausbildungsberuf wichtige Fragen und erfährst unmittelbar, ob Du dafür besonders geeignet bist. Falls wir uns nicht sicher sind, schlagen wir Dir weitere Ausbildungsberufe vor.<br><hr class="divider my-4" /> 
+                                Du brauchst weniger als eine Stunde pro Interview. Die Interviews und deren Ergebnisse werden streng vertraulich behandelt. Unsere Coaches beraten Dich hinsichtlich Deiner Möglichkeiten.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6" id="reihe">
                         <div class="card text-white bg-secondary h-100">
                             <div class="card-header text-center">Jetzt kannst Du Dich entspannen</div>
                             <div class="card-body text primary">
