--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <!-- Anleitung-->
         <section class="page-section" id="manual">
             <div class="container text-center">
-                <h2 class="section-heading text-uppercase text-dark">Was nur wir für Dich tun!</h2>
+                <h2 class="section-heading text-uppercase text-dark">Anleitung</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-3 col-md-6" id="reihe">
@@ -129,10 +129,11 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6" id="reihe">
-                        <div class="card text-white bg-secondary h-100">
+                        <div class="card border-dark h-100 bg-transparent text-dark">
                             <div class="card-header text-center">Jetzt kannst Du Dich entspannen</div>
                             <div class="card-body text primary">
                                 <p class="card-text">Wir suchen nach den passenden Stellen für Dich. Du erhältst Anfragen von Unternehmen und entscheidest, welche für Dich in Frage kommen.</p>
+                                <hr class="divider my-4" />
                             </div>
                         </div>
                     </div>
