--- a/unternehmen.html
+++ b/unternehmen.html
@@ -59,9 +59,9 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-search text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Finde Deine Stärken</h3>
-                            <p class="text-muted mb-0"></p>
+                            <p class="text-muted mb-0">Lern‘ Dich und Deine Leidenschaften kennen. Mach den Berufswahltest und wir sagen Dir, welche Ausbildung zu Dir passt.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
