--- a/unternehmen.html
+++ b/unternehmen.html
@@ -107,7 +107,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading text-light">Erstelle dein Profil</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.<hr class="divider my-4" />
+                            <div class="timeline-body"><p class="text-light">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.</p><hr class="divider my-4" /><p class="text-light">
                             Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
                             </div>
                         </div>
@@ -118,9 +118,9 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading text-light">Berufswahltest</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Mit unserem großen Berufswahl-Test finden wir diejenigen Ausbildungsberufe, die gut zu Dir passen.  
+                            <div class="timeline-body"><p class="text-light">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Mit unserem großen Berufswahl-Test finden wir diejenigen Ausbildungsberufe, die gut zu Dir passen. </p> 
                             <hr class="divider my-4" />
-                            Auch die Ergebnisse dieses Berufswahl-Tests sind streng vertraulich. Du benötigst weniger als eine halbe Stunde dafür.</p>
+                            <p class="text-light">Auch die Ergebnisse dieses Berufswahl-Tests sind streng vertraulich. Du benötigst weniger als eine halbe Stunde dafür.</p>
                             </div>
                         </div>
                     </li>
@@ -130,9 +130,9 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading text-light">Mach‘ den Praxis-Check!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Du beantwortest in einem Online-Interview speziell für diesen Ausbildungsberuf wichtige Fragen und erfährst unmittelbar, ob Du dafür besonders geeignet bist. Falls wir uns nicht sicher sind, schlagen wir Dir weitere Ausbildungsberufe vor. 
+                            <div class="timeline-body"><p class="text-light">Du beantwortest in einem Online-Interview speziell für diesen Ausbildungsberuf wichtige Fragen und erfährst unmittelbar, ob Du dafür besonders geeignet bist. Falls wir uns nicht sicher sind, schlagen wir Dir weitere Ausbildungsberufe vor. </p>
                             <hr class="divider my-4" />
-                            Du brauchst weniger als eine Stunde pro Interview. Die Interviews und deren Ergebnisse werden streng vertraulich behandelt. Unsere Coaches beraten Dich hinsichtlich Deiner Möglichkeiten.</p>
+                            <p class="text-light"> Du brauchst weniger als eine Stunde pro Interview. Die Interviews und deren Ergebnisse werden streng vertraulich behandelt. Unsere Coaches beraten Dich hinsichtlich Deiner Möglichkeiten.</p>
                             </div>
                         </div>
                     </li>
